--- a/gamesforall_angular/src/app/components/login/login.component.html
+++ b/gamesforall_angular/src/app/components/login/login.component.html
@@ -21,9 +21,10 @@
           </button>
         </mat-form-field>
 
-        <button class="full-width" mat-raised-button color="primary" type="submit" [disabled]="formularioLogin.invalid">
-          Entrar<mat-icon matSuffix>login</mat-icon>
+        <button class="full-width boton-negro" mat-raised-button  type="submit" [disabled]="formularioLogin.invalid">
+          Entrar<mat-icon matSuffix>lock_open</mat-icon>
         </button>
+        
 
       </form>
     </mat-card-content>
