--- a/gamesforall_angular/src/app/components/user/user.component.css
+++ b/gamesforall_angular/src/app/components/user/user.component.css
@@ -11,10 +11,9 @@ table {
   margin: 20px 0 0 40px;
   font-size: 32px;
   font-family: 'Arial', sans-serif;
-  background-image: linear-gradient(45deg,  #38b6ff, #00bcd4);
   background-clip: text;
   -webkit-background-clip: text;
-  color: transparent;
+  color: black;
   font-weight: bold;
 }
 
@@ -29,4 +28,8 @@ td{
 .mat-header-cell{
   text-align: center;
 
+}
+
+.mat-raised-button{
+  background-color: #38b6ff ;
 }
