--- a/gamesforall_angular/src/app/components/user/user.component.html
+++ b/gamesforall_angular/src/app/components/user/user.component.html
@@ -75,7 +75,7 @@
           <td mat-cell *matCellDef="let element">
             <button
               mat-icon-button
-              color="primary"
+              color="warning"
               (click)="editUsuario(element)"
             >
               <mat-icon>edit</mat-icon>
