--- a/gamesforall_angular/src/app/components/categories/categories.component.css
+++ b/gamesforall_angular/src/app/components/categories/categories.component.css
@@ -78,5 +78,14 @@
     margin-top: 1em;
   }
   
+  .action-buttons {
+    display: flex;
+    justify-content: space-between; /* O cualquier otra propiedad que se ajuste a tus necesidades */
+  }
+  
+  .edit-button, .delete-button {
+    flex: 1;
+  }
+    
   
   
