--- a/gamesforall_angular/src/app/components/layout/sidenav/sidenav.component.html
+++ b/gamesforall_angular/src/app/components/layout/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
 <div class="contenedor-principal">
   <h1 class="title">GAMESFORALL</h1>
   <button mat-button class="icon-button" routerLink="/dashboard">
-    <mat-icon class="button-icon">dashboard</mat-icon>Panel principal
+    <mat-icon class="button-icon">dashboard</mat-icon>Panel de control
   </button>
   <button mat-button class="icon-button" routerLink="/user">
     <mat-icon class="button-icon">group</mat-icon>Usuarios<mat-icon>arrow_forward</mat-icon>
