--- a/gamesforall_angular/src/app/components/user/user.component.html
+++ b/gamesforall_angular/src/app/components/user/user.component.html
@@ -96,6 +96,6 @@
     </div>
   </mat-card-content>
   <div class="card-footer">
-    <button mat-raised-button [routerLink]="['/platforms']" color="primary">Volver</button>
+    <button mat-raised-button [routerLink]="['/dashboard']" color="primary">Volver</button>
   </div>
 </mat-card>
