--- a/gamesforall_angular/src/app/components/platforms/platforms.component.html
+++ b/gamesforall_angular/src/app/components/platforms/platforms.component.html
@@ -28,14 +28,21 @@
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef style="text-align: center;"></th>
               <td mat-cell *matCellDef="let element" >
-                <button mat-icon-button color="warning" (click)="editPlatform(element)" style="margin-right: 15px;">
-                  <mat-icon>edit</mat-icon>
-                </button>
-                <button mat-icon-button color="warn" (click)="deletePlatform(element)">
-                  <mat-icon>delete</mat-icon>
-                </button>
+                <div class="action-buttons">
+                  <div class="edit-button">
+                    <button mat-icon-button color="warning" (click)="editPlatform(element)">
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                  </div>
+                  <div class="delete-button">
+                    <button mat-icon-button color="warn" (click)="deletePlatform(element)">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </div>
+                </div>
               </td>
             </ng-container>
+            
 
             <tr mat-header-row *matHeaderRowDef="columnasTable" style="text-align: center;"></tr>
             <tr mat-row *matRowDef="let row; columns: columnasTable" style="text-align: center;"></tr>
